--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,10 +7,11 @@ dj-rest-auth==7.0.1
 Django==5.2.1
 django-allauth==65.8.1
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
 idna==3.10
 oauthlib==3.2.2
 pycparser==2.22
-PyJWT==2.10.1
+PyJWT==2.9.0
 python-dotenv==1.1.0
 requests==2.32.3
 requests-oauthlib==2.0.0
